--- a/style.css
+++ b/style.css
@@ -1,12 +1,42 @@
-header{
-	background-color: #f8f9fa;
-	padding: 15px;
-	font-family: Proxima Nova;
+header {
   text-align: center;
 }
 
+.introduction {
+  text-align: center;
+  margin: 10px;
+  padding: 60px;
+}
+
 .container-1 {
-padding-left: 15px;
-position: relative;
-left:0; 
-}	
+  background-color: white;
+  text-align: center;
+  margin: 10px;
+  padding: 60px;
+}
+
+.container-2 {
+  background-color: white;
+  text-align: center;
+  margin: 10px;
+  padding: 60px;
+}
+
+.chart-container {
+  height: 800px; /* Set the desired height */
+  width: 800px; /* Set the desired width */
+  margin: 0 auto; /* Center the chart */
+  text-align: center;
+}
+
+.text2 {
+  text-align: center;
+}
+
+.highlight {
+  background-color: rgb(181, 217, 249); /* Highlight background color */
+  font-weight: bold; /* Make the text bold */
+  padding: 10px; /* Add some padding */
+  border-radius: 5px; /* Add rounded corners */
+}
+
